cambios al portafolio ultimos html

--- a/index.html
+++ b/index.html
@@ -352,14 +352,20 @@
           <div class="proyect_galery mt-5">
             <!-- Proyecto 1: Si, Voy -->
             <div class="proyect_card show" data-category="si_voy">
-              <div class="proyect_image">
-                <img
-                  src="./asets/Si, Voy/Captura de pantalla 2025-06-27 144531.png"
-                  alt="Plataforma Si Voy"
-                />
-              </div>
+              <a href="./proyectos/si_voy.html" class="proyect_image_link">
+                <div class="proyect_image">
+                  <img
+                    src="./asets/Si, Voy/Captura de pantalla 2025-06-27 144531.png"
+                    alt="Plataforma Si Voy"
+                  />
+                  <div class="image-overlay">
+                    <i class="fa-solid fa-eye"></i>
+                    <span>Ver Proyecto Completo</span>
+                  </div>
+                </div>
+              </a>
               <div class="proyect_content">
-                <h3 class="proyect_title">Si, Voy (Proyecto Real)</h3>
+                <h3 class="proyect_title">Si, Voy</h3>
                 <span class="proyect_subtitle"
                   >Plataforma de Turismo Inclusivo</span
                 >
@@ -406,21 +412,32 @@
                 </div>
 
                 <div class="proyect_links">
-                  <a
-                    href="#"
-                    class="proyect_link"
-                    target="_blank"
-                    rel="noopener"
-                  >
-                    <i class="fa-brands fa-github"></i> Ver Código
+                  <a href="./proyectos/si_voy.html" class="proyect_link">
+                    <i class="fa-solid fa-info-circle"></i> Detalles
                   </a>
                   <a
-                    href="#"
+                    href="https://www.sivoy.com.ar"
                     class="proyect_link secondary"
                     target="_blank"
                     rel="noopener"
                   >
-                    <i class="fa-solid fa-globe"></i> Ver Sitio
+                    <i class="fa-solid fa-globe"></i>Ver Sitio
+                  </a>
+                  <a
+                    href="https://www.youtube.com/watch?v=73N9lGJr55I"
+                    class="proyect_link"
+                    target="_blank"
+                    rel="noopener"
+                  >
+                    <i class="fa-brands fa-youtube"></i>Ver Video
+                  </a>
+                  <a
+                    href="https://github.com/ErickNoguera/S-voy---Back.git"
+                    class="proyect_link secondary"
+                    target="_blank"
+                    rel="noopener"
+                  >
+                    <i class="fa-brands fa-github"></i>Ver Código
                   </a>
                 </div>
               </div>
@@ -428,12 +445,16 @@
 
             <!-- Proyecto 2: E-commerce API -->
             <div class="proyect_card show" data-category="e_commerce">
-              <div class="proyect_image">
-                <img
-                  src="./asets/ecomerce-Erick/Captura de pantalla 2025-10-27 112030.png"
-                  alt="ecomerce_portada"
-                />
-              </div>
+              <a href="./proyectos/ecomerce_erick.html" class="proyect_image_link">
+                <div class="proyect_image">
+                  <img src="./asets/ecomerce-Erick/Captura de pantalla 2025-10-27 112030.png"
+                      alt="ecomerce_portada"/>
+                  <div class="image-overlay">
+                    <i class="fa-solid fa-eye"></i>
+                    <span>Ver Proyecto Completo</span>
+                  </div>
+                </div>
+              </a>
               <div class="proyect_content">
                 <h3 class="proyect_title">E-commerce API RESTful</h3>
                 <span class="proyect_subtitle"
@@ -481,12 +502,13 @@
                 </div>
 
                 <div class="proyect_links">
-                  <a
-                    href="#"
-                    class="proyect_link"
-                    target="_blank"
-                    rel="noopener"
-                  >
+                  <a href="./proyectos/ecommerce_erick.html" class="proyect_link">
+                    <i class="fa-solid fa-info-circle"></i> Ver Detalles
+                  </a>
+                  <a href="https://github.com/ErickNoguera/Ecomerce-ErickNoguera.git" 
+                    class="proyect_link secondary" 
+                    target="_blank" 
+                    rel="noopener">
                     <i class="fa-brands fa-github"></i> Ver Código
                   </a>
                 </div>
@@ -495,12 +517,16 @@
 
             <!-- Proyecto 3: AboutMe DevOps -->
             <div class="proyect_card show" data-category="aboutme">
-              <div class="proyect_image">
-                <img
-                  src="./asets/Sobre Mi/Captura de pantalla 2025-06-27 143525.png"
-                  alt="AboutMe DevOps"
-                />
-              </div>
+              <a href="./proyectos/aboutme_devops.html" class="proyect_image_link">
+                <div class="proyect_image">
+                  <img src="./asets/Sobre Mi/Captura de pantalla 2025-06-27 143525.png"
+                      alt="AboutMe DevOps"/>
+                  <div class="image-overlay">
+                    <i class="fa-solid fa-eye"></i>
+                    <span>Ver Proyecto Completo</span>
+                  </div>
+                </div>
+              </a>
               <div class="proyect_content">
                 <h3 class="proyect_title">AboutMe</h3>
                 <span class="proyect_subtitle"
@@ -548,21 +574,14 @@
                 </div>
 
                 <div class="proyect_links">
-                  <a
-                    href="#"
-                    class="proyect_link"
-                    target="_blank"
-                    rel="noopener"
-                  >
-                    <i class="fa-brands fa-github"></i> Ver Código
+                  <a href="./proyectos/aboutme_devops.html" class="proyect_link">
+                    <i class="fa-solid fa-info-circle"></i> Ver Detalles
                   </a>
-                  <a
-                    href="#"
-                    class="proyect_link secondary"
-                    target="_blank"
-                    rel="noopener"
-                  >
-                    <i class="fa-solid fa-diagram-project"></i> Arquitectura
+                  <a href="https://github.com/ErickNoguera/aboutme-devops.git" 
+                    class="proyect_link secondary" 
+                    target="_blank" 
+                    rel="noopener">
+                    <i class="fa-brands fa-github"></i> Ver Código
                   </a>
                 </div>
               </div>
