cuarto html al portafolio

--- a/index.html
+++ b/index.html
@@ -589,12 +589,16 @@
 
             <!-- Proyecto 4: Erick Films -->
             <div class="proyect_card show" data-category="peliculas">
-              <div class="proyect_image">
-                <img
-                  src="./asets/Erick Film/Captura de pantalla 2025-06-27 142601.png"
-                  alt="Erick Films"
-                />
-              </div>
+              <a href="./proyectos/erick_films.html" class="proyect_image_link">
+                <div class="proyect_image">
+                  <img src="./asets/Erick Film/Captura de pantalla 2025-06-27 142601.png"
+                      alt="Erick Films"/>
+                  <div class="image-overlay">
+                    <i class="fa-solid fa-eye"></i>
+                    <span>Ver Proyecto Completo</span>
+                  </div>
+                </div>
+              </a>
               <div class="proyect_content">
                 <h3 class="proyect_title">Erick Films</h3>
                 <span class="proyect_subtitle"
@@ -642,12 +646,13 @@
                 </div>
 
                 <div class="proyect_links">
-                  <a
-                    href="#"
-                    class="proyect_link"
-                    target="_blank"
-                    rel="noopener"
-                  >
+                  <a href="./proyectos/erick_films.html" class="proyect_link">
+                    <i class="fa-solid fa-info-circle"></i> Ver Detalles
+                  </a>
+                  <a href="https://github.com/ErickNoguera/erick_film.git" 
+                    class="proyect_link secondary" 
+                    target="_blank" 
+                    rel="noopener">
                     <i class="fa-brands fa-github"></i> Ver Código
                   </a>
                 </div>
