cambios dia lunes 01/12/2025

--- a/index.html
+++ b/index.html
@@ -809,6 +809,25 @@
       <section id="contact"></section>
     </div>
   </body>
+    <footer class="project-footer">
+    <div class="container">
+      <p>&copy; 2024 Erick Noguera | Full Stack Developer - AWS Cloud Practitioner</p>
+      <div class="footer-links">
+        <a href="https://github.com/ErickNoguera" target="_blank" rel="noopener">
+          <i class="fa-brands fa-github"></i>
+        </a>
+        <a href="https://linkedin.com/in/erickyosethnogueraolaizola" target="_blank" rel="noopener">
+          <i class="fa-brands fa-linkedin"></i>
+        </a>
+        <a href="mailto:erick.noguera0410@gmail.com">
+          <i class="fa-solid fa-envelope"></i>
+        </a>
+        <a href="https://wa.me/56932841056" target="_blank" rel="noopener">
+            <i class="fa-brands fa-whatsapp"></i>
+        </a>
+      </div>
+    </div>
+  </footer>
 
   <script>
     // Funcionalidad de filtrado de proyectos
