--- a/proyectos/aboutme_devops.html
+++ b/proyectos/aboutme_devops.html
@@ -14,7 +14,7 @@
 
 <body class="project-detail-page">
   
-  <!-- NAVIGATION -->
+  <!-- NAVBAR -->
   <nav class="project-nav">
     <div class="container">
       <a href="../index.html#portfolio" class="back-button">
@@ -24,7 +24,7 @@
     </div>
   </nav>
 
-  <!-- HERO SECTION -->
+  <!-- SECCION DE VISIVILIDAD -->
   <section class="project-hero">
     <div class="container">
       <div class="hero-content">
@@ -61,7 +61,7 @@
     </div>
   </section>
 
-  <!-- IMAGE GALLERY -->
+  <!-- GALRIA DE IMAGENES -->
   <section class="project-gallery">
     <div class="container">
       <h2 class="section-title">El Proyecto</h2>
@@ -97,7 +97,7 @@
 
   <div class="container">
     
-    <!-- PROJECT OVERVIEW -->
+    <!-- EL DESAFIO -->
     <section class="project-section">
       <h2 class="section-title">El Desafío</h2>
       <div class="section-content">
@@ -126,7 +126,7 @@
       </div>
     </section>
 
-    <!-- THE TRANSFORMATION -->
+    <!-- LA TRANSFORMACION -->
     <section class="project-section">
       <h2 class="section-title">La Transformación</h2>
       <div class="section-content">
@@ -205,7 +205,7 @@
       </div>
     </section>
 
-    <!-- TECH STACK -->
+    <!-- STACK TECNOLOGICO -->
     <section class="project-section">
       <h2 class="section-title">Stack Tecnológico</h2>
       <div class="section-content">
@@ -271,7 +271,7 @@
       </div>
     </section>
 
-    <!-- LEARNING PROCESS -->
+    <!-- PROCESO DE APRENDIZAJE -->
     <section class="project-section">
       <h2 class="section-title">Proceso de Aprendizaje</h2>
       <div class="section-content">
@@ -311,7 +311,7 @@
       </div>
     </section>
 
-    <!-- THE PRESENTATION -->
+    <!-- LA PRESENTACION TECNICA -->
     <section class="project-section">
       <h2 class="section-title">La Presentación Técnica</h2>
       <div class="section-content">
@@ -370,7 +370,7 @@
       </div>
     </section>
 
-    <!-- KEY IMPLEMENTATIONS -->
+    <!-- IMPLEMENTACIONES CLAVES -->
     <section class="project-section">
       <h2 class="section-title">Implementaciones Clave</h2>
       <div class="section-content">
@@ -425,7 +425,7 @@
       </div>
     </section>
 
-    <!-- CTA SECTION -->
+    <!-- SECCION DE CUENTAS -->
     <section class="project-cta">
       <div class="cta-content">
         <h2>¿Quieres Ver la Implementación?</h2>
