--- a/proyectos/si_voy.html
+++ b/proyectos/si_voy.html
@@ -14,7 +14,7 @@
 
 <body class="project-detail-page">
   
-  <!-- NAVIGATION -->
+  <!-- NAVBAR -->
   <nav class="project-nav">
     <div class="container">
       <a href="../index.html#portfolio" class="back-button">
@@ -24,7 +24,7 @@
     </div>
   </nav>
 
-  <!-- HERO SECTION -->
+  <!-- SECCION DE VISIVILIDAD -->
   <section class="project-hero">
     <div class="container">
       <div class="hero-content">
@@ -56,12 +56,16 @@
             <i class="fa-brands fa-linkedin"></i>
             Ver en LinkedIn
           </a>
+          <a href="https://www.youtube.com/watch?v=73N9lGJr55I" target="_blank" rel="noopener" class="btn-primary">
+            <i class="fa-brands fa-youtube"></i>
+            Ver Video Demo
+          </a>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- IMAGE GALLERY -->
+  <!-- GALRIA DE IMAGENES -->
   <section class="project-gallery">
     <div class="container">
       <h2 class="section-title">Galería del Proyecto</h2>
@@ -113,7 +117,7 @@
 
   <div class="container">
     
-    <!-- PROJECT OVERVIEW -->
+    <!-- SOBRE EL PROYECTO -->
     <section class="project-section">
       <h2 class="section-title">Sobre el Proyecto</h2>
       <div class="section-content">
@@ -145,7 +149,7 @@
       </div>
     </section>
 
-    <!-- WHAT IT OFFERS -->
+    <!-- QUE OFRECE LA PLATAFORMA -->
     <section class="project-section">
       <h2 class="section-title">¿Qué Ofrece la Plataforma?</h2>
       <div class="section-content">
@@ -201,7 +205,7 @@
       </div>
     </section>
 
-    <!-- TECH STACK -->
+    <!-- STACK TECNOLOGICO -->
     <section class="project-section">
       <h2 class="section-title">Stack Tecnológico</h2>
       <div class="section-content">
@@ -212,12 +216,12 @@
             <div class="tech-tags">
               <span class="tech-tag"><i class="fa-brands fa-node-js"></i> Node.js</span>
               <span class="tech-tag"><i class="fa-brands fa-js"></i> TypeScript</span>
-              <span class="tech-tag">Express.js</span>
+              <span class="tech-tag">Nest.js</span>
               <span class="tech-tag">RESTful API</span>
             </div>
             <p class="tech-description">
               Desarrollé endpoints robustos y escalables utilizando Node.js y TypeScript, implementando 
-              arquitectura de microservicios con Express.js para manejar las operaciones CRUD, autenticación 
+              arquitectura de microservicios con Nest.js para manejar las operaciones CRUD, autenticación 
               y lógica de negocio compleja.
             </p>
           </div>
@@ -268,7 +272,7 @@
       </div>
     </section>
 
-    <!-- PROBLEMS SOLVED -->
+    <!-- PROBLEMAS RESUELTOS -->
     <section class="project-section">
       <h2 class="section-title">Problemáticas Resueltas</h2>
       <div class="section-content">
@@ -348,7 +352,7 @@
       </div>
     </section>
 
-    <!-- IMPACT & LEARNINGS -->
+    <!-- IMPACTO Y APRENDIZAJE -->
     <section class="project-section">
       <h2 class="section-title">Impacto y Aprendizajes</h2>
       <div class="section-content">
@@ -402,7 +406,7 @@
       </div>
     </section>
 
-    <!-- TECHNICAL HIGHLIGHTS -->
+    <!-- HIGLIGHTS TECNICOS -->
     <section class="project-section">
       <h2 class="section-title">Highlights Técnicos</h2>
       <div class="section-content">
@@ -448,7 +452,7 @@
       </div>
     </section>
 
-    <!-- CTA SECTION -->
+    <!-- SECCION DE ENLACES -->
     <section class="project-cta">
       <div class="cta-content">
         <h2>¿Interesado en el Proyecto?</h2>
@@ -461,6 +465,10 @@
           <a href="mailto:erick.noguera0410@gmail.com" class="btn-secondary">
             <i class="fa-solid fa-envelope"></i>
             Contactarme
+          </a>
+          <a href="https://wa.me/56932841056" target="_blank" class="btn-secondary">
+            <i class="fa-brands fa-whatsapp"></i>
+            Escríbeme por WhatsApp
           </a>
           <a href="../index.html#portfolio" class="btn-outline">
             <i class="fa-solid fa-arrow-left"></i>
@@ -477,14 +485,17 @@
     <div class="container">
       <p>&copy; 2024 Erick Noguera | Full Stack Developer - AWS Cloud Practitioner</p>
       <div class="footer-links">
-        <a href="https://github.com/tu-usuario" target="_blank" rel="noopener">
+        <a href="https://github.com/ErickNoguera" target="_blank" rel="noopener">
           <i class="fa-brands fa-github"></i>
         </a>
-        <a href="https://linkedin.com/in/tu-perfil" target="_blank" rel="noopener">
+        <a href="https://linkedin.com/in/erickyosethnogueraolaizola" target="_blank" rel="noopener">
           <i class="fa-brands fa-linkedin"></i>
         </a>
         <a href="mailto:erick.noguera0410@gmail.com">
           <i class="fa-solid fa-envelope"></i>
+        </a>
+        <a href="https://wa.me/56932841056" target="_blank" rel="noopener">
+            <i class="fa-brands fa-whatsapp"></i>
         </a>
       </div>
     </div>
