cambios al dia lunes 01/12

--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
               <li class="filter-item" data-filter="peliculas">
                 Peliculas (Erick Films)
               </li>
-              <li class="filter-item" data-filter="autovolt">
+              <li class="filter-item" data-filter="auto-volt">
                 Auto-volt.cl (Proyecto Real)
               </li>
               <li class="filter-item" data-filter="iu_tienda_online">
@@ -661,12 +661,15 @@
 
             <!-- Proyecto 5: Auto-volt.cl -->
             <div class="proyect_card show" data-category="autovolt">
-              <div class="proyect_image">
-                <img
-                  src="./asets/Auto-volt.cl/Captura de pantalla 2025-10-24 103243.png"
-                  alt="Auto-volt.cl"
-                />
-              </div>
+              <a href="./proyectos/auto-volt.html" class="proyect_image_link">
+                <div class="proyect_image">
+                  <img src="./asets/Auto-volt.cl/Captura de pantalla 2025-10-24 103243.png" alt="Auto-volt"/>
+                  <div class="image-overlay">
+                    <i class="fa-solid fa-eye"></i>
+                    <span>Ver Proyecto Completo</span>
+                  </div>
+                </div>
+              </a>
               <div class="proyect_content">
                 <h3 class="proyect_title">Auto-volt.cl (Proyecto Real)</h3>
                 <span class="proyect_subtitle"
@@ -717,15 +720,9 @@
                     dockerizados en GCP. Actualmente opera en producción.
                   </p>
                 </div>
-
                 <div class="proyect_links">
-                  <a
-                    href="#"
-                    class="proyect_link"
-                    target="_blank"
-                    rel="noopener"
-                  >
-                    <i class="fa-brands fa-github"></i> Ver Código
+                  <a href="./proyectos/auto-volt.html" class="proyect_link">
+                    <i class="fa-solid fa-info-circle"></i> Ver Detalles
                   </a>
                   <a
                     href="#"
