--- a/proyectos/erick_films.html
+++ b/proyectos/erick_films.html
@@ -517,6 +517,10 @@
             <i class="fa-solid fa-book"></i>
             Leer Documentación
           </a>
+          <a href="https://wa.me/56932841056" target="_blank" class="btn-primary">
+            <i class="fa-brands fa-whatsapp"></i>
+            Escríbeme por WhatsApp
+          </a>
           <a href="../index.html#portfolio" class="btn-outline">
             <i class="fa-solid fa-arrow-left"></i>
             Ver Más Proyectos
@@ -540,6 +544,9 @@
         </a>
         <a href="mailto:erick.noguera0410@gmail.com">
           <i class="fa-solid fa-envelope"></i>
+        </a>
+        <a href="https://wa.me/56932841056" target="_blank" rel="noopener">
+            <i class="fa-brands fa-whatsapp"></i>
         </a>
       </div>
     </div>
