--- a/index.html
+++ b/index.html
@@ -4,7 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="Description" content="Template portafolio " />
-    <title>Portafolio Erick</title>
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://ericknoguera.netlify.app/" />
+    <meta property="og:title" content="Erick Noguera | Full Stack Developer - AWS Cloud Practitioner" />
+    <meta property="og:description" content="Desarrollador Full Stack especializado en Python, Django, Node.js y DevOps. Explora mis proyectos reales en producción." />
+    <meta property="og:image" content="https://ericknoguera.netlify.app/asets/portada-preview.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:site_name" content="Erick Noguera Portfolio" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://ericknoguera.netlify.app/" />
+    <meta name="twitter:title" content="Erick Noguera | Full Stack Developer" />
+    <meta name="twitter:description" content="Desarrollador Full Stack especializado en Python, Django, Node.js y DevOps." />
+    <meta name="twitter:image" content="https://ericknoguera.netlify.app/asets/portada-preview.png" />
+    <link rel="icon" type="image/png" href="./asets/Logo Erick Noguera.png" />
+    <title>Erick Noguera | Full Stack Developer - AWS Cloud Practitioner</title>
     <link rel="stylesheet" href="style.css" />
 
     <link
@@ -130,7 +145,7 @@
               como la colaboración real, me encantaría ser parte de él.
             </p>
             <div class="knowledge flex flex-column gap-3 mt-5">
-              <p>JavaScrip</p>
+              <p>JavaScript</p>
               <div class="progress_bar progress_javascript">
                 <span></span>
               </div>
@@ -789,7 +804,7 @@
                 </div>
 
                 <div class="proyect_links">
-                  <a href="./proyectos/iu-tienda-online.html" class="proyect_link">
+                  <a href="./proyectos/iu_tienda_online.html" class="proyect_link">
                     <i class="fa-solid fa-info-circle"></i> Ver Detalles
                   </a>
                   <a href="https://iutiendaonline.com/" 
