--- a/index.html
+++ b/index.html
@@ -6,17 +6,21 @@
     <meta name="Description" content="Template portafolio " />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://ericknoguera.netlify.app/" />
-    <meta property="og:title" content="Erick Noguera | Full Stack Developer - AWS Cloud Practitioner" />
-    <meta property="og:description" content="Desarrollador Full Stack especializado en Python, Django, Node.js y DevOps. Explora mis proyectos reales en producción." />
+    <meta property="og:title" content="Erick Noguera | Full Stack Developer & AWS Cloud Practitioner" />
+    <meta property="og:description" content="Desarrollador Full Stack con experiencia en Python, Django, Node.js y DevOps. Proyectos reales en producción: Auto-volt.cl, Si-Voy, IU Tienda Online." />
     <meta property="og:image" content="https://ericknoguera.netlify.app/asets/portada-preview.png" />
+    <meta property="og:image:secure_url" content="https://ericknoguera.netlify.app/asets/portada-preview.png" />
+    <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
+    <meta property="og:image:alt" content="Erick Noguera - Full Stack Developer Portfolio" />
     <meta property="og:site_name" content="Erick Noguera Portfolio" />
+    <meta property="og:locale" content="es_CL" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:url" content="https://ericknoguera.netlify.app/" />
-    <meta name="twitter:title" content="Erick Noguera | Full Stack Developer" />
-    <meta name="twitter:description" content="Desarrollador Full Stack especializado en Python, Django, Node.js y DevOps." />
+    <meta name="twitter:title" content="Erick Noguera | Full Stack Developer & AWS Cloud Practitioner" />
+    <meta name="twitter:description" content="Backend Developer & AWS Cloud Practitioner con experiencia en Python, Django, Node.js y DevOps." />
     <meta name="twitter:image" content="https://ericknoguera.netlify.app/asets/portada-preview.png" />
     <link rel="icon" type="image/png" href="./asets/Logo Erick Noguera.png" />
     <title>Erick Noguera | Full Stack Developer - AWS Cloud Practitioner</title>
