modificacion del cv

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           </p>
           <div class="home_buttons flex align-items-center gap-2 mt-6">
             <a
-              href="./asets/CV Erick - Jr Platform Engineers.pdf"
+              href="./asets/CV Erick - Backend Jr.pdf"
               aria-label="Descargar curriculum"
               class="cursor-pointer border-round-lg"
               download
